kube-manifests/1-app/1-diamond-price-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: diamond-price-predictor-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: diamond-price-predictor-app
  template:  
    metadata:
      labels: 
        app: diamond-price-predictor-app
    spec:
      containers:
        - name: diamond-price-predictor-container
          image: vinods03/diamond_price_predictor_app:v6
          ports: 
            - containerPort: 5000
