kube-manifests/1-app/2-service-definition-for-diamond-price-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: diamond-price-predictor-service
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /diamond_price_predict/health_check
  #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
  
spec:
  type: NodePort
  selector:
    app: diamond-price-predictor-app
  ports: 
    - port: 80 # pod / service port
      targetPort: 5000 # container port
      nodePort: 31233 # node port
